--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@ h1 {
     font-size: 65px;
     font-weight: 700;
     color: white;
-    text-align: center;
-    padding-top: 250px;
 }
 
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 30px;
     font-weight: 400;
-    color: white;
+    color: gray;
     text-align: center;
     margin-bottom: 100px;
 }
@@ -33,6 +31,7 @@ p {
 
 }
 
+/* top banner Or Main Header section Start */
 .top-banner {
     width: 100vw;
     height: 100vh;
@@ -42,6 +41,28 @@ p {
     background-size: cover;
 }
 
-.top-banner-button {
-    margin-left: 850px;
+.text-area {
+    width: 50vw;
+    height: 60wh;
+    padding-top: 10%;
+    padding-left: 25%;
+    text-align: center;
 }
+
+.text-area h1 {
+    font-family: 'Inter', sans-serif;
+    font-size: 65px;
+    font-weight: 700;
+    color: white;
+}
+
+.text-area p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    color: white;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+/* top banner Or Main Header section End */
