--- a/style.css
+++ b/style.css
@@ -192,3 +192,30 @@ p {
 }
 
 /* Our Gallery Section End Here */
+
+/* Get My Update Section Start From Here */
+
+.get-my-update {
+    width: 950px;
+    height: 650px;
+    text-align: center;
+    margin-top: 80px;
+    margin-left: 450px;
+}
+
+.contact-email {
+    height: 300px;
+    background-color: #FFF4D6;
+}
+
+.contact-email input {
+    font-family: 'Roboto', sans-serif;
+    width: 300px;
+    padding: 20px;
+    border: 2px solid gray;
+    border-radius: 10px;
+    margin-top: 120px;
+    font-size: 20px;
+}
+
+/* Get My Update Section End Here  */
