--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p {
     color: white;
     text-align: center;
     padding: 20px 40px;
-    background-color: tomato;
+    background-color: #FF5959;
     border-radius: 10px;
 
 }
@@ -104,7 +104,7 @@ p {
     margin: 20px;
     padding: 10px 20px;
     border-radius: 5px;
-    border: 3px solid tomato;
+    border: 3px solid #FF5959;
     background-color: rgba(255, 99, 71, 0.137);
 }
 
@@ -219,3 +219,25 @@ p {
 }
 
 /* Get My Update Section End Here  */
+/* Footer Section Start From Here  */
+footer {
+    height: 200px;
+    background-color: black;
+    text-align: center;
+}
+
+footer h1 {
+    font-family: 'Lobster', cursive;
+    color: #FF5959;
+    font-size: 50px;
+    padding-top: 40px;
+    font-weight: 900;
+}
+
+footer p {
+    font-family: 'Manrope', sans-serif;
+    color: white;
+    font-size: 20px;
+}
+
+/* Footer Section End Here */
